--- a/GestionDePublicidad/src/main/resources/templates/tablaTrabajadores.html
+++ b/GestionDePublicidad/src/main/resources/templates/tablaTrabajadores.html
@@ -34,29 +34,32 @@
       </a>
 
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a th:href="@{/inicio}" id="inicio" class="nav-link px-2 link-ul">Inicio</a></li>
-        <li><a href="/dashboard" class="nav-link px-2 link-ul">Atras</a></li>
+        <li><a href="/dashboard" class="nav-link px-2 link-ul letrasNav">Atras</a></li>
       </ul>
 
-      <div class="col-md-3 text-end">
-        <a href="/perfil"><button type="button" class="btn boton-registrate">Mi perfil</button></a>
-        <a th:href="@{/logout}"><button type="button" class="btn btn-outline boton-iniciar-sesion me-2">
-            Cerrar Sesion
-          </button></a>
+
+      <div class="dropdown">
+        <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="" alt="" width="32" height="32" class="rounded-circle me-2">
+          <span>Nombre Apellido</span>
+        </a>
+        <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+          <li><a class="dropdown-item" href="#">Perfil</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
+        </ul>
       </div>
     </header>
   </div>
   <!-- FIN NAVBAR -->
 
-  <div class="contenedorBody">
-
+  <div class="contenedorBody container-fluid row">
     <!--INICIO/BIENVENIDA-->
-    <div id="body">
+    <div class="col-6">
       <section id="mensajeSuperior">
         <div id="burbuja">
           <h1>TRABAJADORES</h1>
-          <p>A continuacion se listaran los empleados existentes en la base de datos, puede filtrarlos o no. Para
-            modificar o eliminar debe acceder al mismo. </p>
+          <p>A continuacion se listaran los empleados existentes puede filtrarlos o no </p>
         </div>
       </section>
       <!-- FIN INICIO/BIENVENIDA-->
@@ -97,37 +100,50 @@
 
       </section>
       <!-- FIN FILTROS -->
-
+    </div>
+    <div class="col-6">
       <!-- INICIO TABLA -->
       <section class="contenedorTabla">
-        <table>
+        <table class="table">
           <thead>
             <tr id="filaTitulos">
               <th scope="col">Nombre</th>
               <th scope="col">E-mail</th>
               <th scope="col">Puesto</th>
               <th scope="col">ROL</th>
-              <th scope="col">Proyecto</th>
-
+              <th scope="col">Acciones</th>
             </tr>
           </thead>
-          <tbody th:each="usuario:${usuarios}">
+          <tbody th:each="trabajador:${trabajadores}">
             <tr>
-              <td th:text="${usuario.nombre}"> </td>
-              <td th:text="${usuario.email}"> </td>
-              <td th:text="${usuario.puestoEmpresa}"> </td>
-              <!--LINKEAR-->
-              <td th:text="${usuario.rol}"></td>
-              <!--LINKEAR-->
-              <td th:text="${usuario.proyecto.nombre}"></td>
-            </tr>
+              <td th:text="${trabajador.nombre}"> 
+                <a th:action="${/perfil/__{trabajador.id}__}"></a>
+              </td>
+              <td th:text="${trabajador.email}"> </td>
+              <td th:text="${trabajador.puestoEmpresa}"> </td>
+              <td th:text="${trabajador.rol}"> </td>
+              <td>
+                <a th:action="${admin/modificarTrabajador/__{trabajador.id}__}">
+                  <button type="submit"><img
+                      src="/GestionDePublicidad/src/main/resources/static/img/botones/Magic Wand_Lineal-coloured.png"></button>
+                </a>
+                <a th:action="${admin/eliminarTrabajador/__{trabajador.id}__}">
+                  <button type="submit"><img
+                      src="/GestionDePublicidad/src/main/resources/static/img/botones/Dustbin_Flat.png"></button>
+                </a>
+              </td>           
+             </tr>
           </tbody>
         </table>
       </section>
       <!-- FIN TABLA -->
-
     </div>
-
+  </div>
+    <!-- JAVASCRIPT -->
+    <script src="/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" 
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
