--- a/GestionDePublicidad/src/main/resources/templates/dashboard.html
+++ b/GestionDePublicidad/src/main/resources/templates/dashboard.html
@@ -19,29 +19,31 @@
 </head>
 
 <body>
-  <!-- INICIO NAVBAR -->
-  <div class="container-fluid bdn">
+   <!-- INICIO NAVBAR -->
+   <div class="container-fluid bdn">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
       <a href="" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
-        <img class="dashboard"
+        <img class="diamante"
           src="https://see.fontimg.com/api/renderfont4/vmpKZ/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjMzNFMkRDIiwiYmdjIjoiIzAxMDEwMSIsInQiOjF9/ZGFzaGJvYXJk/ceceps-handwriting.png"
-          alt="dashboard">
+          alt="dashboars">
         <img id="lettering"
           src="https://see.fontimg.com/api/renderfont4/axgPE/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjRkZGRkZGIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/V2VUaGluaw/cannu-regular.png"
           alt="wethink">
       </a>
 
+      <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        
+      </ul>
+
+
       <div class="dropdown">
-        <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser2"
-          data-bs-toggle="dropdown" aria-expanded="false">
+        <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
           <img src="" alt="" width="32" height="32" class="rounded-circle me-2">
           <span>Nombre Apellido</span>
         </a>
         <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
           <li><a class="dropdown-item" href="#">Perfil</a></li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
+          <li><hr class="dropdown-divider"></li>
           <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
         </ul>
       </div>
@@ -142,11 +144,11 @@
   </div>
   <!-- FIN CARDS -->
 
-  <!-- JAVASCRIPT BOOTSTRAP -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
-  <!-- JAVASCRIPT -->
+   <!-- JAVASCRIPT -->
+   <script src="/script.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
+     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" 
+     crossorigin="anonymous"></script>
 </body>
 
 </html>
