--- a/GestionDePublicidad/src/main/resources/templates/indexTrabajador.html
+++ b/GestionDePublicidad/src/main/resources/templates/indexTrabajador.html
@@ -13,7 +13,7 @@
     <!-- ICONOS BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="/GestionDePublicidad/src/main/resources/static/indexTrabajador.css">
+    <link rel="stylesheet" href="/GestionDePublicidad/src/main/resources/static/indexCliente.css">
     <!-- FONT TITULO -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,150 +32,135 @@
 
 <body>
     <!-- INICIO NAVBAR -->
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-        <a href="" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
-            <img src="img/logos/logo-diamante-blanco.png" style="width: 15%;" alt="logo">
-            <img id="lettering"
-                src="https://see.fontimg.com/api/renderfont4/axgPE/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjRkZGRkZGIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/V2VUaGluaw/cannu-regular.png"
-                alt="wethink">
-        </a>
+    <div class="container-fluid bdn">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
+            <a href="" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
+                <img src="img/logos/logo-diamante-blanco.png" style="width: 15%;" alt="logo">
+                <img id="lettering"
+                    src="https://see.fontimg.com/api/renderfont4/axgPE/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjRkZGRkZGIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/V2VUaGluaw/cannu-regular.png"
+                    alt="wethink">
+            </a>
+                                        <!--CENTRAR-->
+            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                <li><a th:action="@{/crearProyecto}" class="nav-link px-2 link-ul">Crear Proyecto</a></li>
+                <li><a th:action="@{/trabajador/agenda}" class="nav-link px-2 link-ul">Agenda</a></li>
+                <li><a th:action="@{/trabajador/notas}" class="nav-link px-2 link-ul">Notas</a></li>
+              </ul>
 
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="/index" class="nav-link px-2 link-ul">Inicio</a></li>
-            <li><a href="" class="nav-link px-2 link-ul"></a></li>
-        </ul>
-
-        <div class="col-md-3 text-end">
-        </div>
-    </header>
+            <div class="dropdown">
+                <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser2"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="" alt="" width="32" height="32" class="rounded-circle me-2">
+                    <span>Nombre Apellido</span>
+                </a>
+                <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+                    <li><a class="dropdown-item" href="#">Perfil</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
+                </ul>
+            </div>
+        </header>
+    </div>
     <!-- FIN NAVBAR -->
 
-    <div class="container-fluid">
-        <div id="body">
+    <div class="container-fluid contenedorBody">
+        <!--INICIO/BIENVENIDA-->
+        <section id="mensajeSuperior">
+            <div id="burbuja">
+                <h1>Bienvenido</h1>
+                <p>En esta pagina podra ver sus proyectos y filtrarlos, agregar uno nuevo. Tambien tiene su agenda de emails y sus notas </p>
+            </div>
+        </section>
+        <!-- FIN INICIO/BIENVENIDA-->
 
-            <!--INICIO/BIENVENIDA-->
-            <section id="mensajeSuperior">
-                <div id="burbuja">
-                    <h1>Bienvenido</h1>
-                    <p>A continuacion se listaran los proyectos en que participa, la opcion de agregar mas proyectos
-                        y
-                        su
-                        agenda de contactos interna. </p>
-                </div>
+        <section class="row">
+            <div class="col-6">
+                <!--FILTROS-->
+                <section id="mensajeFiltros">
 
-                <!-- INICIO OPCIONES-->
-                <div class="container d-flex justify-content-center align-items-center seccion-servicio">
-                    <div class="row">
-                        <div class="card col-2">
-                            <a href="">
-                                <div class="box">
-                                    <div class="content">
-                                        <i class="bi bi-list-task"></i>
-                                        <h3 id="Agenda">Agenda</h3> <!-- HACER VISTA Y LINKEAR-->
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
+                    <form th:action="@{/trabajador/tablaProyectos/nombre}">
+                        <label for="nombre">
+                            <p>Filtro por nombre</p>
+                        </label><br>
+                        <input type="text" id="nombre" name="nombre" placeholder="" />
+                        <button type="submit" class="btn btn-light">Buscar</button>
+                    </form>
 
-                        <div class="card col-2">
-                            <a th:href="@{proyecto/crear}">
-                                <div class="box">
-                                    <div class="content">
-                                        <i class="bi bi-sticky"></i>
-                                        <h3>Crear Proyecto</h3> <!-- LINKEAR-->
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
+                    <form th:action="@{/trabajador/tablaProyectos/fechaInicio}">
+                        <label for="inicio">
+                            <p>Filtro por fecha de inicio</p>
+                        </label><br>
+                        <input type="date" id="inicio" name="fechaInicio" placeholder="" />
+                        <button type="submit" class="btn btn-light">Buscar</button>
+                    </form>
 
-                    </div>
-                </div>
-                <!--FIN OPCIONES-->
-            </section>
-            <!-- FIN INICIO/BIENVENIDA-->
+                    <form th:action="@{/trabajador/tablaProyectos/fechaFin}">
+                        <label for="fin">
+                            <p>Filtro por fecha de fin</p>
+                        </label><br>
+                        <input type="date" id="fin" name="fechaFin" placeholder="" />
+                        <button type="submit" class="btn btn-light">Buscar</button>
+                    </form>
 
+                    <form th:action="@{/trabajador/tablaProyectos/estado}">
+                        <label for="estado">
+                            <p>Filtro por estado</p>
+                        </label><br>
+                        <select id="estado" name="estado">
+                            <option></option>
+                            <option value="FINALIZADO">Finalizado</option>
+                            <option value="ENPROCESO">En Proceso</option>
+                            <option value="INICIADO"> Iniciado</option>
+                        </select>
+                        <button type="submit" class="btn btn-light">Buscar</button>
+                    </form>
 
-            <section id="flitroYtabla" class="row">
-                <div class="col-6">
-                    <!--FILTROS-->
-                    <section id="mensajeFiltros">
-                        <form th:action="@{/trabajador/tablaProyectos/nombre}">
-
-                            <label for="nombre">
-                                <p>Filtro por nombre</p>
-                            </label><br>
-                            <input type="text" id="nombre" name="nombre" placeholder="" />
-                            <button type="submit" class="btn btn-light">Buscar</button>
-                        </form>
-
-                        <form th:action="@{/trabajador/tablaProyectos/fechaInicio}">
-
-                            <label for="inicio">
-                                <p>Filtro por fecha de inicio</p>
-                            </label><br>
-                            <input type="date" id="inicio" name="fechaInicio" placeholder="" />
-                            <button type="submit" class="btn btn-light">Buscar</button>
-                        </form>
-
-                        <form th:action="@{/trabajador/tablaProyectos/fechaFin}">
-
-                            <label for="fin">
-                                <p>Filtro por fecha de fin</p>
-                            </label><br>
-                            <input type="date" id="fin" name="fechaFin" placeholder="" />
-                            <button type="submit" class="btn btn-light">Buscar</button>
-                        </form>
-
-                        <form th:action="@{/trabajador/tablaProyectos/estado}">
-
-                            <label for="estado">
-                                <p>Filtro por estado</p>
-                            </label><br>
-                            <select id="estado" name="estado">
-                                <option></option>
-                                <option value="FINALIZADO">Finalizado</option>
-                                <option value="ENPROCESO">En Proceso</option>
-                                <option value="INICIADO"> Iniciado</option>
-                            </select>
-                            <button type="submit" class="btn btn-light">Buscar</button>
-                        </form>
-                    </section>
-                    <!--fin FILTROS-->
-                </div>
-                <div class="col-6">
-                    <!--PROYECTOS-->
-                    <div id="seccionTabla">
-                        <h1>Proyectos</h1>
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th scope="col">Nombre</th>
-                                    <th scope="col">Inicio</th>
-                                    <th scope="col">Fin</th>
-                                    <th scope="col">Estado</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each="proyecto : ${proyectos}">
-                                    <td class="celdas" th:text="${proyecto.nombre}">
-                                        <a th:href="@{proyecto/__${proyecto.id}__}"></a>
-                                    </td><!-- LINKEAR-->
-                                    <td class="celdas" th:text="${proyecto.fechaInicio}"></td>
-                                    <td class="celdas" th:text="${proyecto.fechaFin}"></td>
-                                    <td class="celdas" th:text="${proyecto.estado}"></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                        <!--FIN PROYECTOS-->
-                    </div>
-                </div>
-            </section>
-        </div>
-        <!-- JAVASCRIPT BOOTSTRAP -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-            crossorigin="anonymous"></script>
-        <!-- JAVASCRIPT -->
+                </section>
+                <!--fin FILTROS-->
+            </div>
+            <div class="col-6">
+                <!--PROYECTOS-->
+                <section class="contenedorTabla">
+                    <h1>Proyectos</h1>
+                    <table class="table">
+                        <thead>
+                            <tr id="filaTitulos">
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Inicio</th>
+                                <th scope="col">Fin</th>
+                                <th scope="col">Estado</th>
+                                <th scope="col">Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr th:each="proyecto:${proyectos}">
+                                <td scope="row" th:text="${proyecto.nombre}">
+                                    <a th:href="@{proyecto/__${proyecto.id}__}"></a>
+                                </td><!-- VER CONTROLADOR-->
+                                <td th:text="${proyecto.fechaInicio}"></td>
+                                <td th:text="${proyecto.fechaFin}"></td>
+                                <td th:text="${proyecto.estado}"></td>
+                                <td>
+                                    <a th:action="@{admin/modificarProyecto/__{proyecto.id}__}">
+                                        <button type="submit"><img
+                                            src="/GestionDePublicidad/src/main/resources/static/img/botones/Magic Wand_Lineal-coloured.png"></button>
+                                      </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <!--FIN PROYECTOS-->
+                </section>
+            </div>
+        </section>
+    </div>
+    <!-- JAVASCRIPT -->
+    <script src="/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
