--- a/GestionDePublicidad/src/main/resources/templates/tablaClientes.html
+++ b/GestionDePublicidad/src/main/resources/templates/tablaClientes.html
@@ -109,16 +109,16 @@
           <tbody th:each="cliente:${clientes}">
             <tr>
               <td scope="row" th:text="${cliente.nombre}">
-                <a th:action="${/perfil/__{cliente.id}__}"></a>  
+                <a th:action="@{/perfil/__${cliente.id}__}"></a>  
               </td>
               <td th:text="${cliente.email}"> </td>
               <td th:text="${cliente.rol}"></td>
               <td>
-                <a th:action="${admin/modificarCliente/__{cliente.id}__}">
+                <a th:action="@{admin/modificarCliente/__${cliente.id}__}">
                   <button type="submit"><img
                       src="/GestionDePublicidad/src/main/resources/static/img/botones/Magic Wand_Lineal-coloured.png"></button>
                 </a>
-                <a th:action="${admin/eliminarCliente/__{cliente.id}__}">
+                <a th:action="@{admin/eliminarCliente/__${cliente.id}__}">
                   <button type="submit"><img
                       src="/GestionDePublicidad/src/main/resources/static/img/botones/Dustbin_Flat.png"></button>
                 </a>
@@ -131,7 +131,11 @@
       <!-- FIN TABLA -->
     </div>
   </div>
-
+ <!-- JAVASCRIPT -->
+ <script src="/script.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
+   integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" 
+   crossorigin="anonymous"></script>
 </body>
 
 </html>
