--- a/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
+++ b/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
   <!-- CSS -->
   <link rel="stylesheet" href="/GestionDePublicidad/src/main/resources/static/tablaProyectos.css">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@600&family=Titillium+Web&display=swap"
@@ -123,18 +122,18 @@
           <tbody th:each="proyecto:${proyectos}">
             <tr>
               <td scope="row" th:text="${proyecto.nombre}">
-                <a th:action="${/proyecto/__{proyecto.id}__}"></a>
+                <a th:action="@{/proyecto/__${proyecto.id}__}"></a>
               </td>
               <!--VER CONTROLADOR-->
               <td th:text="${proyecto.fechaInicio}"></td>
               <td th:text="${proyecto.fechaFin}"></td>
               <td th:text="${proyecto.estadoProyecto}"></td>
               <td>
-                <a th:action="${admin/modificarProyecto/__{proyecto.id}__}">
+                <a th:action="@{admin/modificarProyecto/__{proyecto.id}__}">
                   <button type="submit"><img
                       src="/GestionDePublicidad/src/main/resources/static/img/botones/Magic Wand_Lineal-coloured.png"></button>
                 </a>
-                <a th:action="${admin/eliminarProyecto/__{proyecto.id}__}">
+                <a th:action="@{admin/eliminarProyecto/__{proyecto.id}__}">
                   <button type="submit"><img
                       src="/GestionDePublicidad/src/main/resources/static/img/botones/Dustbin_Flat.png"></button>
                 </a>
@@ -147,6 +146,11 @@
       <!-- FIN TABLA -->
     </div>
   </div>
+   <!-- JAVASCRIPT -->
+   <script src="/script.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
+     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" 
+     crossorigin="anonymous"></script>
 </body>
 
 </html>
