--- a/GestionDePublicidad/src/main/resources/static/login.css
+++ b/GestionDePublicidad/src/main/resources/static/login.css
@@ -21,6 +21,10 @@ body{
     background-image: linear-gradient(90deg,#fff 0%, #14FFEC 200%);
 }
 
+span{
+    font-size: 14px;
+}
+
 .bdn{
     background-color: #212121;
     font-family: 'Titillium Web', sans-serif;
