--- a/GestionDePublicidad/src/main/resources/static/registro.css
+++ b/GestionDePublicidad/src/main/resources/static/registro.css
@@ -17,6 +17,10 @@ font-family: 'Titillium Web', sans-serif;
     box-sizing: border-box;
 }
 
+span{
+    font-size: 14px;
+}
+
 body{
     background-image: linear-gradient(90deg,#fff 0%, #14FFEC 200%);
 }
