--- a/GestionDePublicidad/src/main/resources/templates/registro.html
+++ b/GestionDePublicidad/src/main/resources/templates/registro.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@600&family=Titillium+Web&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
     
@@ -62,9 +63,12 @@
                 <div class="d-flex justify-content-center mt-4">
                 <button type="submit" class="btn boton-registrarte">Registrarte</button>
                 </div>
-            </form>
+            </form>           
         </div>
         </div>
+                 <div class="d-flex justify-content-center text-danger mt-4 fw-semibold text-uppercase animate__animated animate__flash">
+                    <span th:text="${error}" class=""></span>
+                 </div>  
     </section>
 
 
