--- a/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
+++ b/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
@@ -34,7 +34,7 @@
   
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
           <li><a href="/dashboard" class="nav-link px-2 link-ul letrasNav">Atras</a></li>
-          <li><a href="/crearProyecto" class="nav-link px-2 link-ul letrasNav">Crear Proyecto</a></li>
+          <li><a th:action="@{/crearProyecto}" class="nav-link px-2 link-ul letrasNav">Crear Proyecto</a></li>
           <!--VER CONTROLADOR-->
         </ul>
   
