--- a/GestionDePublicidad/src/main/resources/templates/agregarCliente.html
+++ b/GestionDePublicidad/src/main/resources/templates/agregarCliente.html
@@ -59,19 +59,18 @@
                     <thead>
                         <tr id="filaTitulos">
                             <th scope="col">Nombre</th>
-                            <th scope="col">E-mail</th>
-                            <th scope="col">Acciones</th>
+                            <th scope="col">E-mail</th>                           
                         </tr>
                     </thead>
                     <tbody th:each="cliente:${clientes}">
                         <tr>
-                            <td scope="row" th:text="${trabajador.nombre}">
-                            </td>
+                            <td scope="row" th:text="${cliente.nombre}"></td>
+                            <td th:text="${cliente.email}"></td>
                         </tr>
                     </tbody>
                 </table>
             </section>
-        <form th:action="@{/proyecto/__${proyecto.id}__}" method="POST" class="form-registro">
+        <form th:action="@{/proyecto/agregarUsuario/__${proyecto.id}__}" method="POST" class="form-registro">
             <p>Ingrese e-mail del cliente a agregar</p>
             <input class="texto" type="email" name="email" id="email">
 
