--- a/GestionDePublicidad/src/main/resources/static/style.css
+++ b/GestionDePublicidad/src/main/resources/static/style.css
@@ -78,6 +78,18 @@ h3{
     border-radius: 15px;
 }
 
+.contenedor-msj-exito{
+    background-color: rgb(255, 255, 255,0.30);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 20px 0 rgba(31,38,135,0.37);
+    backdrop-filter: blur(5px);
+    border-radius: 15px;
+    width: 200px;
+    position: absolute;
+    top: 90px;
+    right: 30px;
+}
+
 .contenedor-imagen-principal img{
     width: 190px;
     height: 320px;
