--- a/GestionDePublicidad/src/main/resources/templates/login.html
+++ b/GestionDePublicidad/src/main/resources/templates/login.html
@@ -67,7 +67,7 @@
                  <div class="d-flex justify-content-center fw-lighter contenedor-span mt-2">
                      <a href="#"><span>¿Has olvidado tu contraseña?</span></a>
                 </div>
-                <div class="d-flex justify-content-center text-danger text-uppercase contenedor-span mt-5 fw-semibold animate__flash">
+                <div class="d-flex justify-content-center text-danger text-uppercase contenedor-span mt-5 fw-semibold animate__animated animate__flash">
                      <span th:text="${error}"></span>
                 </div>
             </form>
