--- a/GestionDePublicidad/src/main/resources/static/styleDashboard.css
+++ b/GestionDePublicidad/src/main/resources/static/styleDashboard.css
@@ -27,9 +27,6 @@ p{
     font-family: 'Titillium Web', sans-serif;
 }
 
-.dashboard{
-    width: 80px;
-}
 
 .dropdown-menu{
     background-color: #212121;
@@ -57,32 +54,23 @@ body{
     background-image: linear-gradient(90deg,#fff 0%, #14FFEC 200%);
 }
 
-
-
-.col-12{
-    align-items: center;
-    text-align: center;
-}
-
-.cards{
-  padding: 5px;
-  height: 270px;
-}
-
 .card{
-    display: inline-block;
+    box-shadow: 0 8px 30px 0 rgba(31,38,135,0.37);
+    backdrop-filter: blur(5px);
+    border-radius: 15px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    background-color: rgb(255, 255, 255,0.30);
     margin: 8px;
-    perspective: 1000;
-    position: relative;
-    text-align: left;
+    text-align: center;
     transition: all 0.3s 0s ease-in;
-    width: 200px;
-    height: 250px ;
-    z-index: 1;
-    border-radius: 5px;
+    width: 220px;
+    height: 270px ;
+    border-radius: 15px;
+    overflow: hidden;
 }
 
 .card:hover{
+    background-color: rgb(255, 255, 255,0.60);
     cursor: pointer;
     transition: 0.15s ease-in-out 0s;
     border-color: rgb(20, 255, 236);
@@ -90,45 +78,48 @@ body{
 }
 
 .card__image-holder{
-    background: whitesmoke;
-    height: 0px;
-    padding-bottom: 75%;
+    width: 100%;
+    height: 150px;
+    z-index: 0;
 }
 
 .card__image{
-    background: whitesmoke;
-    max-width: 200px;
-}
-
-.card-title{
-    background:  whitesmoke;
-    padding: 6px 15px 10px;
-    position: relative;
+    max-width: 150px;
+    height: 150px;
     z-index: 0;
 }
 
 .card-description{
-    padding: 0 15px 10px;
-    position: relative;
+    padding: 5px 12px;
     font-size: 14px;
-    background:  rgb(255, 233, 177); 
     font-family: 'Hind Siliguri' !important;
     color:rgb(33, 33, 33);
+    height: 100%;
 }
 
-.card-title h2 {
-    font-size: 24px;
+.card-title h2{
+    position: relative;
+    font-size: 22px;
     font-weight: 700;
-    letter-spacing: -0.05em;
-    margin: 0;
-    padding: 0;
-    background-color:  whitesmoke;
+    letter-spacing: -0.02em;
     text-shadow:rgb(33, 33, 33) 0.5 0.5;
     color: rgb(119, 67, 219) !important;
     font-family: 'Titillium Web', sans-serif;
+    padding: 0;
+    margin-top: -10px;
+    z-index: 100;
 }
 
 .nav-link{
     color: white !important;
 }
 
+.cards a{
+    text-decoration: none;
+}
+
+.cards .card__image-holder{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
