--- a/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
+++ b/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WeThink-Busqueda</title>
+  <title>WeThink</title>
   <!-- CSS BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <!-- ICONOS BOOTSTRAP -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
   <!-- CSS -->
-  <link rel="stylesheet" href="/GestionDePublicidad/src/main/resources/static/tablaProyectos.css">
+  <link rel="stylesheet" href="/tablaProyectos.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@600&family=Titillium+Web&display=swap"
@@ -20,39 +20,51 @@
 </head>
 
 <body>
-    <!-- INICIO NAVBAR -->
-    <div class="container-fluid bdn">
-      <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3">
-        <a href="" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-white text-decoration-none">
-          <img class="diamante"
-            src="https://see.fontimg.com/api/renderfont4/vmpKZ/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjMzNFMkRDIiwiYmdjIjoiIzAxMDEwMSIsInQiOjF9/ZGFzaGJvYXJk/ceceps-handwriting.png"
-            alt="dashboars">
-          <img id="lettering"
-            src="https://see.fontimg.com/api/renderfont4/axgPE/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjRkZGRkZGIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/V2VUaGluaw/cannu-regular.png"
-            alt="wethink">
-        </a>
-  
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/dashboard" class="nav-link px-2 link-ul letrasNav">Atras</a></li>
-          <li><a th:action="@{/crearProyecto}" class="nav-link px-2 link-ul letrasNav">Crear Proyecto</a></li>
-          <!--VER CONTROLADOR-->
-        </ul>
-  
-  
-        <div class="dropdown">
-          <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="" alt="" width="32" height="32" class="rounded-circle me-2">
-            <span>Nombre Apellido</span>
+   <!-- INICIO NAVBAR -->
+    <nav class="navbar navbar-expand-sm bdn">
+    
+      <div class="container-fluid">
+        <div>
+          <a href="" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-decoration-none">
+            <img src="/img/logos/logo-diamante-blanco.png" style="width: 50px; height: auto; margin-right: 5px;"
+              alt="diamante">
+            <img src="/img/logos/logo-blanco.png" style="width: 105px; height: auto;" alt="logo">
           </a>
-          <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-            <li><a class="dropdown-item" href="#">Perfil</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Cerrar Sesion</a></li>
-          </ul>
         </div>
-      </header>
-    </div>
-  <!-- FIN NAVBAR -->
+    
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0 py-2">
+            <li><a th:action="@{/crearProyecto}" class="nav-link px-2 link-ul letrasNav">Crear Proyecto</a></li>
+            <li><a th:href="@{/inicio}" class="nav-link px-2 link-ul letrasNav">Atras</a></li>
+          </ul>
+    
+          <div class="dropdown">
+            <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser2"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+              <span>Nombre Apellido</span>
+            </a>
+            <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+              <li><a class="dropdown-item" href=#>Perfil</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" th:href="@{/logout}">Cerrar Sesion</a></li>
+            </ul>
+          </div>
+    
+        </div>
+      </div>
+    </nav>
+    <!-- FIN NAVBAR -->
+  
+  
+   
 
   <div class="container-fluid row contenedorBody">
     <!--INICIO/BIENVENIDA-->
