--- a/GestionDePublicidad/src/main/resources/templates/dashboard.html
+++ b/GestionDePublicidad/src/main/resources/templates/dashboard.html
@@ -47,10 +47,10 @@
             <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser2"
               data-bs-toggle="dropdown" aria-expanded="false">
               <img th:src="@{/imagen/perfil/__${session.usuariosession.id_usuario}__}" alt="" width="32" height="32" class="rounded-circle me-2">
-              <span>Nombre Apellido</span>
+              <span th:text="${usuario.nombre}" class="text-uppercase"></span>
             </a>
             <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-              <li><a class="dropdown-item" href=#>Perfil</a></li>
+              <li><a class="dropdown-item" th:href="@{/perfil}" >Perfil</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
