--- a/GestionDePublicidad/src/main/resources/templates/indexTrabajador.html
+++ b/GestionDePublicidad/src/main/resources/templates/indexTrabajador.html
@@ -64,7 +64,7 @@
               <span>Nombre Apellido</span>
             </a>
             <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-              <li><a class="dropdown-item" href="#">Perfil</a></li>
+              <li><a class="dropdown-item" th:href="@{/perfil}">Perfil</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
