Permisos y rutas TRABAJADOR/ADMIN

--- a/GestionDePublicidad/src/main/resources/templates/crearProyecto.html
+++ b/GestionDePublicidad/src/main/resources/templates/crearProyecto.html
@@ -54,7 +54,7 @@
     <!-- FIN NAVBAR -->
 
     <section class="container-fluid">
-        <form th:action="@{/proyecto/crear}" method="POST">
+        <form th:action="@{/proyecto/cargar}" method="POST">
             <label for="nombre">
                 <p>Nombre/Titulo</p>
             </label><br>
