--- a/GestionDePublicidad/src/main/resources/templates/perfil.html
+++ b/GestionDePublicidad/src/main/resources/templates/perfil.html
@@ -87,7 +87,7 @@
                 
                     <input class="texto" name="rol" type="rol" th:value="${usuario.rol}" placeholder="Rol" required>
               
-                    <input class="texto" name="password" type="password"  placeholder="Contraseña" required>
+                    <input class="texto" name="password" type="password"  placeholder="Contraseña">
                
                     <select>
                         <option value="GERENTE"> GERENTE</option>
