--- a/GestionDePublicidad/src/main/resources/templates/dashboard.html
+++ b/GestionDePublicidad/src/main/resources/templates/dashboard.html
@@ -71,7 +71,7 @@
     <div class="row">
       <section class="cards d-flex justify-content-center">
 
-          <a th:href="@{/proyecto/tablaProyectos}">
+          <a th:href="@{/admin/tablaProyectos}">
           <div class="card">
             <div class="card__image-holder">
               <img class="card__image" src="/img/botones/Proyectos1.png" alt="img" />
