--- a/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
+++ b/GestionDePublicidad/src/main/resources/templates/tablaProyectos.html
@@ -39,32 +39,32 @@
     
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto mb-2 mb-lg-0 py-2">
-            <li><a th:href="@{/crearProyecto}" class="nav-link px-2 link-ul letrasNav">Crear Proyecto</a></li>
-            <li><a th:href="@{/inicio}" class="nav-link px-2 link-ul letrasNav">Atras</a></li>
+            <li class="nav-item">
+                <a th:href="@{/inicio}"><img src="https://see.fontimg.com/api/renderfont4/vmpKZ/eyJyIjoiZnMiLCJoIjo0MSwidyI6MTAwMCwiZnMiOjQxLCJmZ2MiOiIjMzNFMkRDIiwiYmdjIjoiIzAxMDEwMSIsInQiOjF9/ZGFzaGJvYXJk/ceceps-handwriting.png" alt="dashboard"></a> 
+            </li>
           </ul>
     
+            <div class="">
           <div class="dropdown">
             <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="dropdownUser2"
               data-bs-toggle="dropdown" aria-expanded="false">
-              <img th:src="@{/imagen/perfil/__${session.usuariosession.id_usuario}__}" alt="foto-perfil" width="32" height="32" class="rounded-circle me-2">
-              <span>Nombre Apellido</span>
+              <img th:src="@{/imagen/perfil/__${session.usuariosession.id_usuario}__}" alt="" width="32" height="32" class="rounded-circle me-2">
+              <span th:text="${session.usuariosession.nombre}"></span>
             </a>
             <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-              <li><a class="dropdown-item" href=#>Perfil</a></li>
+              <li><a class="dropdown-item" th:href="@{/perfil}" >Perfil</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
               <li><a class="dropdown-item" th:href="@{/logout}">Cerrar Sesion</a></li>
             </ul>
           </div>
+           </div>
     
         </div>
       </div>
     </nav>
     <!-- FIN NAVBAR -->
-  
-  
-   
 
   <div class="container-fluid row contenedorBody">
     <!--INICIO/BIENVENIDA-->
@@ -136,7 +136,6 @@
               <td scope="row" th:text="${proyecto.nombre}">
                 <a th:href="@{/proyecto/__${proyecto.id}__}"></a>
               </td>
-              <!--VER CONTROLADOR-->
               <td th:text="${proyecto.fechaInicio}"></td>
               <td th:text="${proyecto.fechaFin}"></td>
               <td th:text="${proyecto.estadoProyecto}"></td>
